# fast-ccg

./: Cargo.toml  README.md  ccg_results.h5  run_benchmark.sh
julia/benchmark/: bench_real.jl  bench_synthetic.jl  benchmark_real.h5  benchmark_synthetic.h5  plot_benchmark.jl
julia/lib/: ccg.jl  load_data.jl  significance.jl
julia/python/: ccg_jittercorrected.py  run_ccg_python.jl
julia/rust/: ccg_run_batch.jl  plot_ccg.jl  run_ccg.jl  run_ccg_job.jl  run_significance_shuffle.jl
julia/slurm/: build_sysimage.jl  job.sh  precompile_exec.jl  submit_jobs.jl
src/: jitter.rs  lib.rs  xcorr.rs
